--- a/BaiTapDoAn/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BaiTapDoAn/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                                         <li>
                                             <a href="page-lock.html"><i class="icon-lock"></i> <span>Lock Screen</span></a>
                                         </li>
-                                        <li><a href="page-login.html"><i class="icon-key"></i> <span>Logout</span></a></li>
+                                        <li><a asp-action="Logout" asp-controller="Login"><i class="icon-key"></i> <span>Logout</span></a></li>
                                     </ul>
                                 </div>
                             </div>
