--- a/BaiTapDoAn/Areas/Admin/Views/Members/Index.cshtml
+++ b/BaiTapDoAn/Areas/Admin/Views/Members/Index.cshtml
@@ -23,6 +23,7 @@
                         </button>
                     </div>
                     <form asp-action="Create">
+                        <div class="modal-body">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="Username" class="control-label"></label>
@@ -34,18 +35,14 @@
                             <input asp-for="Password" class="form-control" />
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="Role" class="control-label"></label>
-                            <input asp-for="Role" class="form-control" />
-                            <span asp-validation-for="Role" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Status" class="control-label"></label>
-                            <input asp-for="Status" class="form-control" />
-                            <span asp-validation-for="Status" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" value="Create" class="btn btn-primary" />
+                            <div class="form-group">
+                                <label asp-for="Role" class="control-label"></label>
+                                <select asp-for="Role" class="form-control" asp-items="ViewBag.listRoles" id="editrole"></select>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Status" class="control-label"></label>
+                                <select asp-for="Status" class="form-control" asp-items="ViewBag.listStatus" id="editstatus"></select>
+                            </div>
                         </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -73,9 +70,7 @@
                 <div class="modal-body">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Username" class="control-label"></label>
-                    <input asp-for="Username" class="form-control" id="editname"/>
-                    <span asp-validation-for="Username" class="text-danger"></span>
+                    <input type="hidden" asp-for="Username" class="form-control" id="editname" name="username"/>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
@@ -152,7 +147,7 @@
                 <div class="modal-header">Delete confirm</div>
                 <div class="modal-body">
 
-                <input type="hidden" asp-for="Username" />
+                <input type="text" asp-for="Username" id="delvalue" name="username"/>
                 Bạn có chắc muốn xóa người dùng này không?
                 </div>
                 <div class="modal-footer">
